logs/django-db-snapshot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dbsnapshot'...
Listing './lib/python3.5/site-packages/dbsnapshot/locale'...
Listing './lib/python3.5/site-packages/dbsnapshot/locale/ru'...
Listing './lib/python3.5/site-packages/dbsnapshot/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dbsnapshot/management'...
Listing './lib/python3.5/site-packages/dbsnapshot/management/commands'...
Listing './lib/python3.5/site-packages/dbsnapshot/migrations'...
Compiling './lib/python3.5/site-packages/dbsnapshot/models.py'...
***   File "./lib/python3.5/site-packages/dbsnapshot/models.py", line 34
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_db_snapshot-1.0.b.dist-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
